--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   "dependencies": {
     "socket.io": "^2.1.0"
   },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-security": "^1.4.0"
+  },
   "engines": {
     "node": ">=9.0.0"
   }
