--- a/docker/web/site.conf
+++ b/docker/web/site.conf
@@ -1,11 +1,33 @@
+upstream socket-server-upstream {
+    ip_hash;
+    server socket-server:3000;
+    server socket-server:3001;
+    keepalive 16;
+}
+
 server {
+    listen 80;
     index index.html;
-    server_name roman-voloboev-techtask-201803.dev;
+    server_name currently-viewing-app.dev;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /app;
 
     location / {
         try_files $uri /index.html;
+    }
+
+    location /socket.io/ {
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-NginX-Proxy true;
+
+        proxy_pass http://socket-server-upstream/socket.io/;
+        proxy_redirect off;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 }
