--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "author": "animir@ya.ru",
   "license": "MIT",
   "dependencies": {
-    "socket.io": "^2.1.0"
+    "socket.io": "^2.1.0",
+    "socket.io-redis": "^5.2.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
