--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     links:
       - socket-server
     volumes:
-      - ./public:/app
+      - ./client/public:/app
       - ./docker/web/site.conf:/etc/nginx/conf.d/default.conf
   socket-server:
     build: docker/socket-server/
