--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - ./client/public:/app
       - ./docker/web/site.conf:/etc/nginx/conf.d/default.conf
   socket-server:
-    build: docker/socket-server/
+    build: server/
     network_mode: bridge
     links:
       - redis
@@ -20,6 +20,8 @@ services:
       - "3001"
     volumes:
       - ./server:/app
+      - /app/node_modules
+    tty: true
   redis:
     image: redis:alpine
     network_mode: bridge
