--- a/server/process.yml
+++ b/server/process.yml
@@ -4,6 +4,7 @@ apps:
     env:
       NODE_ENV: development
       NODE_PORT: 3000
+      #NODE_DEBUG: redis
     env_production:
       NODE_ENV: production
       NODE_PORT: 3000
@@ -12,6 +13,7 @@ apps:
     env:
       NODE_ENV: development
       NODE_PORT: 3001
+      #NODE_DEBUG: redis
     env_production:
       NODE_ENV: production
       NODE_PORT: 3001
