--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,19 @@
     "socket.io-redis": "^5.2.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-security": "^1.4.0"
+    "eslint-plugin-security": "^1.4.0",
+    "mocha": "^5.0.5",
+    "redis-mock": "^0.21.0"
   },
   "engines": {
     "node": ">=9.0.0"
+  },
+  "scripts": {
+    "test": "mocha src/**/**.spec.js"
   }
 }
