--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     network_mode: bridge
     links:
       - redis
+    ports:
+      - "9229:9229"
     expose:
       - "3000"
       - "3001"
