--- a/server/package.json
+++ b/server/package.json
@@ -19,12 +19,14 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-security": "^1.4.0",
     "mocha": "^5.0.5",
-    "redis-mock": "^0.21.0"
+    "redis-mock": "^0.21.0",
+    "socket.io-client": "^2.1.0"
   },
   "engines": {
     "node": ">=9.0.0"
   },
   "scripts": {
-    "test": "mocha src/**/**.spec.js"
+    "test-unit": "mocha src/**/**.test.unit.js",
+    "test-func": "mocha src/**/**.test.func.js --timeout 15000"
   }
 }
