--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "build": "./node_modules/.bin/webpack"
   },
   "dependencies": {
+    "redux": "^4.0.0",
     "socket.io-client": "^2.1.0"
   },
   "devDependencies": {
